<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDFD3"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:layout_marginTop="240dp"
        android:text="@string/view_current_location"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccount" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/update_location"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F44336"
        app:iconTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnView" />

    <Button
        android:id="@+id/btnFamily"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/view_friends"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdate" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="263dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:text="@string/logout"
        android:textColor="#FFFDFD"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFamily" />
</androidx.constraintlayout.widget.ConstraintLayout>